# solana-starter

./: .gitignore  .gitmodules
rs/: .gitignore  Cargo.toml  readme.md
rs/src/: cluster1.rs  lib.rs  prereqs.rs
rs/src/programs/: mod.rs  wba_prereq.rs
ts/: .gitignore  package-lock.json  package.json  readme.md  tsconfig.json
ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  readme.md  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts  vault_close.ts  vault_deposit.ts  vault_deposit_nft.ts  vault_deposit_spl.ts  vault_init.ts  vault_withdraw.ts  vault_withdraw_nft.ts  vault_withdraw_spl.ts
ts/cluster1/programs/: wba_vault.ts
ts/cluster1/wallet/: .gitignore
ts/prereqs/: airdrop.ts  enroll.ts  keygen.ts  readme.md  transfer.ts
ts/programs/: wba_prereq.ts
ts/tools/: airdrop_to_wallet.ts  base58_to_wallet.ts  wallet_to_base58.ts
